--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -221,13 +221,19 @@
 	<string name="pref_zoom_title">Zoom buttons</string>
 	<string name="pref_zoom_summary">Display on the map</string>
 	<!-- Settings «Map» category: «Night style» title -->
-	<string name="pref_map_style_title">Night Mode</string>
+  <string name="pref_map_style_title">Appearance</string>
 	<!-- Generic «Off» string -->
 	<string name="off">Off</string>
 	<!-- Generic «On» string -->
 	<string name="on">On</string>
 	<!-- Generic «Auto» string -->
 	<string name="auto">Auto</string>
+  <!-- Generic «Light» string -->
+  <string name="light">Light</string>
+  <!-- Generic «Dark» string -->
+  <string name="dark">Dark</string>
+  <!-- Generic «System» string -->
+  <string name="system">System</string>
 	<!-- Settings «Map» category: «Perspective view» title -->
 	<string name="pref_map_3d_title">Perspective view</string>
 	<!-- Settings «Map» category: «3D buildings» title -->
