--- a/iphone/Maps/LocalizedStrings/az.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/az.lproj/Localizable.strings
@@ -1325,6 +1325,9 @@
 /* iCloud error message: iCloud is not available */
 "icloud_synchronization_error_cloud_is_unavailable" = "Xəta: iCloud mövcud deyil";
 
+/* Text for the "Recover" button on the Recently Deleted screen */
+"recover" = "Bərpa edin";
+
 
 /********** Types **********/
 
