--- a/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
@@ -1325,6 +1325,9 @@
 /* iCloud error message: iCloud is not available */
 "icloud_synchronization_error_cloud_is_unavailable" = "Virhe: iCloud ei ole käytettävissä";
 
+/* Text for the "Recover" button on the Recently Deleted screen */
+"recover" = "Palauta";
+
 
 /********** Types **********/
 
