--- a/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
@@ -1325,6 +1325,9 @@
 /* iCloud error message: iCloud is not available */
 "icloud_synchronization_error_cloud_is_unavailable" = "Errore: iCloud non è disponibile";
 
+/* Text for the "Recover" button on the Recently Deleted screen */
+"recover" = "Recupera";
+
 
 /********** Types **********/
 
