--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -1325,6 +1325,9 @@
 /* iCloud error message: iCloud is not available */
 "icloud_synchronization_error_cloud_is_unavailable" = "Feil: iCloud er ikke tilgjengelig";
 
+/* Text for the "Recover" button on the Recently Deleted screen */
+"recover" = "Gjenopprette";
+
 
 /********** Types **********/
 
