--- a/android/app/src/main/res/values-bg/strings.xml
+++ b/android/app/src/main/res/values-bg/strings.xml
@@ -559,7 +559,7 @@
 	<string name="bookmark_lists_show_all">Показване на всичко</string>
 	<string name="bookmarks_create_new_group">Създаване на нов списък</string>
 	<!-- Bookmark categories screen, button that opens folder selection dialog to import KML/KMZ/GPX/KMB files -->
-	<string name="bookmarks_import">Импортиране на отметки и песни</string>
+	<string name="bookmarks_import">Импортиране на отметки и маршрути</string>
 	<string name="bookmarks_error_message_share_general">Не е възможно споделяне поради грешка в приложението</string>
 	<string name="bookmarks_error_title_share_empty">Грешка при споделяне</string>
 	<string name="bookmarks_error_message_share_empty">Не може да се споделя празен списък</string>
