--- a/android/app/src/main/res/values-bg/strings.xml
+++ b/android/app/src/main/res/values-bg/strings.xml
@@ -542,8 +542,10 @@
 	<string name="learn_more">Научете повече</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Изход</string>
-	<string name="routing_add_start_point">Добавяне на начална точка за планиране на маршрут</string>
-	<string name="routing_add_finish_point">Добавяне на крайна точка за планиране на маршрут</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Използвайте търсене или докоснете картата, за да добавите начална точка на маршрута</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Използвайте търсене или докоснете картата, за да добавите точка на дестинация</string>
 	<string name="placepage_remove_stop">Премахване</string>
 	<string name="placepage_add_stop">Добавяне на спирка</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
