--- a/android/app/src/main/res/values-et/strings.xml
+++ b/android/app/src/main/res/values-et/strings.xml
@@ -579,8 +579,10 @@
 	<string name="learn_more">Lisateave</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Välju</string>
-	<string name="routing_add_start_point">Marsruudi planeerimiseks lisa lähtepunkt</string>
-	<string name="routing_add_finish_point">Marsruudi planeerimiseks lisa sihtkoht</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Marsruudi alguspunkti lisamiseks kasutage otsingut või puudutage kaarti</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Kasutage otsingut või koputage kaardil sihtkoha lisamiseks</string>
 	<string name="placepage_remove_stop">Eemalda</string>
 	<string name="placepage_add_stop">Lisa peatus</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
