--- a/android/app/src/main/res/values-eu/strings.xml
+++ b/android/app/src/main/res/values-eu/strings.xml
@@ -585,8 +585,10 @@
 	<string name="learn_more">Irakurri gehiago</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Irten</string>
-	<string name="routing_add_start_point">Gehitu abiapuntu bat ibilbide bat antolatzeko</string>
-	<string name="routing_add_finish_point">Gehitu helmuga bat ibilbide bat antolatzeko</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Erabili bilaketa edo sakatu mapan ibilbidearen abiapuntua gehitzeko</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Erabili bilaketa edo sakatu mapan helmuga puntu bat gehitzeko</string>
 	<string name="placepage_remove_stop">Kendu</string>
 	<string name="placepage_add_stop">Gehitu geldiunea</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
