--- a/android/app/src/main/res/values-fr/strings.xml
+++ b/android/app/src/main/res/values-fr/strings.xml
@@ -588,8 +588,10 @@
 	<string name="learn_more">En savoir plus</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Sortie</string>
-	<string name="routing_add_start_point">Ajouter un point de départ pour planifier un itinéraire</string>
-	<string name="routing_add_finish_point">Ajouter un point d\'arrivée pour planifier un itinéraire</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Utilise la recherche ou tape sur la carte pour ajouter un point de départ d\'itinéraire</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Utilise la recherche ou tape sur la carte pour ajouter un point de destination</string>
 	<string name="placepage_remove_stop">Supprimer</string>
 	<string name="placepage_add_stop">Ajouter un arrêt</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
