--- a/android/app/src/main/res/values-hu/strings.xml
+++ b/android/app/src/main/res/values-hu/strings.xml
@@ -568,8 +568,10 @@
 	<string name="learn_more">Tudjon meg többet</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Kilépés</string>
-	<string name="routing_add_start_point">Adjon hozzá kiindulási pontot az útvonal megtervezéséhez</string>
-	<string name="routing_add_finish_point">Adjon hozzá végpontot az útvonal tervezéséhez</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Használja a keresést, vagy koppintson a térképre az útvonal kezdőpontjának hozzáadásához</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Használja a keresést, vagy koppintson a térképre egy célpont hozzáadásához</string>
 	<string name="placepage_remove_stop">Eltávolítja</string>
 	<string name="placepage_add_stop">Hozzáad megállót</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
