--- a/android/app/src/main/res/values-it/strings.xml
+++ b/android/app/src/main/res/values-it/strings.xml
@@ -570,8 +570,10 @@
 	<string name="learn_more">Scopri di più</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Uscita</string>
-	<string name="routing_add_start_point">Aggiungi un punto di partenza per pianificare un percorso</string>
-	<string name="routing_add_finish_point">Aggiungi un punto di arrivo per pianificare un percorso</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Usa la ricerca o tocca la mappa per aggiungere un punto di partenza del percorso</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Usa la ricerca o tocca la mappa per aggiungere un punto di destinazione</string>
 	<string name="placepage_remove_stop">Rimuovi</string>
 	<string name="placepage_add_stop">Aggiungi sosta</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
