--- a/android/app/src/main/res/values-nb/strings.xml
+++ b/android/app/src/main/res/values-nb/strings.xml
@@ -587,8 +587,10 @@
 	<string name="learn_more">Finn ut mer</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Avslutt</string>
-	<string name="routing_add_start_point">Angi startpunkt for å planlegge rute</string>
-	<string name="routing_add_finish_point">Angi sluttpunkt for å planlegge rute</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Bruk søk eller trykk på kartet for å legge til et startpunkt for ruten</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Bruk søk eller trykk på kartet for å legge til et destinasjonspunkt</string>
 	<string name="placepage_remove_stop">Fjern</string>
 	<string name="placepage_add_stop">Angi stopp</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
