--- a/android/app/src/main/res/values-pl/strings.xml
+++ b/android/app/src/main/res/values-pl/strings.xml
@@ -586,8 +586,10 @@
 	<string name="learn_more">Dowiedz się więcej</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Wyjście</string>
-	<string name="routing_add_start_point">Aby zaplanować trasę, dodaj punkt początkowy</string>
-	<string name="routing_add_finish_point">Aby zaplanować trasę, dodaj punkt końcowy</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Użyj funkcji wyszukiwania lub dotknij mapy, aby dodać punkt początkowy trasy</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Użyj funkcji wyszukiwania lub dotknij mapy, aby dodać punkt docelowy</string>
 	<string name="placepage_remove_stop">Usuń</string>
 	<string name="placepage_add_stop">Dodaj postój</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
