--- a/android/app/src/main/res/values-ru/strings.xml
+++ b/android/app/src/main/res/values-ru/strings.xml
@@ -590,8 +590,10 @@
 	<string name="learn_more">Узнать больше</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Выход</string>
-	<string name="routing_add_start_point">Добавьте стартовую точку, чтобы построить маршрут</string>
-	<string name="routing_add_finish_point">Добавьте конечную точку, чтобы построить маршрут</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Используйте поиск или коснитесь карты, чтобы добавить начальную точку маршрута</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Используйте поиск или коснитесь карты, чтобы добавить точку назначения</string>
 	<string name="placepage_remove_stop">Удалить</string>
 	<string name="placepage_add_stop">Заехать</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
