--- a/android/app/src/main/res/values-sv/strings.xml
+++ b/android/app/src/main/res/values-sv/strings.xml
@@ -552,8 +552,10 @@
 	<string name="learn_more">Läs mer</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Avsluta</string>
-	<string name="routing_add_start_point">Lägg till startpunkt för att planera en rutt</string>
-	<string name="routing_add_finish_point">Lägg till slutpunkt för att planera en rutt</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Använd sökfunktionen eller tryck på kartan för att lägga till en startpunkt för rutten</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Använd sökfunktionen eller tryck på kartan för att lägga till en destinationspunkt</string>
 	<string name="placepage_remove_stop">Ta bort</string>
 	<string name="placepage_add_stop">Lägg till stopp</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
