--- a/android/app/src/main/res/values-tr/strings.xml
+++ b/android/app/src/main/res/values-tr/strings.xml
@@ -587,8 +587,10 @@
 	<string name="learn_more">Daha fazla bilgi edinin</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Çık</string>
-	<string name="routing_add_start_point">Rotayı planlamak için bir başlangıç noktası ekleyin</string>
-	<string name="routing_add_finish_point">Rotayı planlamak için bir varış noktası ekleyin</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Bir rota başlangıç noktası eklemek için aramayı kullanın veya haritaya dokunun</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Bir hedef noktası eklemek için aramayı kullanın veya haritaya dokunun</string>
 	<string name="placepage_remove_stop">Kaldır</string>
 	<string name="placepage_add_stop">Ara nokta ekle</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
