--- a/android/app/src/main/res/values-uk/strings.xml
+++ b/android/app/src/main/res/values-uk/strings.xml
@@ -589,8 +589,10 @@
 	<string name="learn_more">Докладніше</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Вихід</string>
-	<string name="routing_add_start_point">Вкажіть початкову точку для побудови маршруту</string>
-	<string name="routing_add_finish_point">Вкажіть кінцеву точку для побудови маршруту</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Скористайтеся пошуком або торкніться мапи, щоб додати початкову точку маршруту</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Скористайтеся пошуком або торкніться мапи, щоб додати пункт призначення</string>
 	<string name="placepage_remove_stop">Видалити</string>
 	<string name="placepage_add_stop">Додати зупинку</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
