--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -612,8 +612,10 @@
 	<string name="learn_more">Learn more</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Exit</string>
-	<string name="routing_add_start_point">Add a starting point to plan a route</string>
-	<string name="routing_add_finish_point">Add a destination to plan a route</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Use search or tap on the map to add a route starting point</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Use search or tap on the map to add a destination point</string>
 	<string name="placepage_remove_stop">Remove</string>
 	<string name="placepage_add_stop">Add Stop</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
