--- a/android/app/src/main/res/values-ar/strings.xml
+++ b/android/app/src/main/res/values-ar/strings.xml
@@ -600,8 +600,10 @@
 	<string name="learn_more">معرفة المزيد</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">خروج</string>
-	<string name="routing_add_start_point">أضف نقطة البداية لتخطيط المسار</string>
-	<string name="routing_add_finish_point">أضف النهاية لتخطيط المسار</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">استخدام البحث أو النقر على الخريطة لإضافة نقطة بداية الطريق</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">استخدام البحث أو النقر على الخريطة لإضافة نقطة وجهة</string>
 	<string name="placepage_remove_stop">إزالة</string>
 	<string name="placepage_add_stop">إضافة نقطة توقف</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
