--- a/android/app/src/main/res/values-az/strings.xml
+++ b/android/app/src/main/res/values-az/strings.xml
@@ -587,8 +587,10 @@
 	<string name="learn_more">Daha ətraflı</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Çıx</string>
-	<string name="routing_add_start_point">Marşrutu planlaşdırmaq üçün başlanğıc nöqtəsi əlavə edin</string>
-	<string name="routing_add_finish_point">Marşrutu planlaşdırmaq üçün təyinat əlavə edin</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Marşrutun başlanğıc nöqtəsi əlavə etmək üçün axtarışdan istifadə edin və ya xəritədə klikləyin</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Təyinat nöqtəsi əlavə etmək üçün axtarışdan istifadə edin və ya xəritədə klikləyin</string>
 	<string name="placepage_remove_stop">Sil</string>
 	<string name="placepage_add_stop">Dayanacaq nöqtəsini əlavə edin</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
