--- a/android/app/src/main/res/values-cs/strings.xml
+++ b/android/app/src/main/res/values-cs/strings.xml
@@ -559,8 +559,10 @@
 	<string name="learn_more">Zjistit více</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Ukončit</string>
-	<string name="routing_add_start_point">Zadejte výchozí bod pro plánování trasy</string>
-	<string name="routing_add_finish_point">Zadejte cílový bod pro plánování trasy</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Pomocí vyhledávání nebo klepnutím na mapu přidejte výchozí bod trasy</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Pomocí vyhledávání nebo klepnutím na mapu přidejte cílový bod</string>
 	<string name="placepage_remove_stop">Odstranit</string>
 	<string name="placepage_add_stop">Přidat zastávku</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
