--- a/android/app/src/main/res/values-da/strings.xml
+++ b/android/app/src/main/res/values-da/strings.xml
@@ -555,8 +555,10 @@
 	<string name="learn_more">Flere oplysninger</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Afslut</string>
-	<string name="routing_add_start_point">Tilføj startpunkt for at planlægge en rute</string>
-	<string name="routing_add_finish_point">Tilføj slutpunkt for at planlægge en rute</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Brug søgning eller tryk på kortet for at tilføje et startpunkt for en rute</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Brug søgning eller tryk på kortet for at tilføje et destinationspunkt</string>
 	<string name="placepage_remove_stop">Fjern</string>
 	<string name="placepage_add_stop">Tilføj stop</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
