--- a/android/app/src/main/res/values-in/strings.xml
+++ b/android/app/src/main/res/values-in/strings.xml
@@ -556,8 +556,10 @@
 	<string name="learn_more">Pelajari selengkapnya</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">Keluar</string>
-	<string name="routing_add_start_point">Tambahkan titik awal untuk merencanakan rute</string>
-	<string name="routing_add_finish_point">Tambahkan titik akhir untuk merencanakan rute</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">Gunakan pencarian atau ketuk pada peta untuk menambahkan titik awal rute</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">Gunakan pencarian atau ketuk pada peta untuk menambahkan titik tujuan</string>
 	<string name="placepage_remove_stop">Hapus</string>
 	<string name="placepage_add_stop">Tambah perhentian</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
