--- a/android/app/src/main/res/values-ja/strings.xml
+++ b/android/app/src/main/res/values-ja/strings.xml
@@ -589,8 +589,10 @@
 	<string name="learn_more">詳細情報</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">出口</string>
-	<string name="routing_add_start_point">ルートを計画するには出発地を追加してください</string>
-	<string name="routing_add_finish_point">ルートを計画するには目的地を追加してください</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">検索を使うか、地図上をタップしてルートの出発点を追加する</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">検索を使うか、地図上をタップして目的地を追加する</string>
 	<string name="placepage_remove_stop">削除</string>
 	<string name="placepage_add_stop">中間地点を追加</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
