--- a/android/app/src/main/res/values-zh-rTW/strings.xml
+++ b/android/app/src/main/res/values-zh-rTW/strings.xml
@@ -572,8 +572,10 @@
 	<string name="learn_more">瞭解更多資訊</string>
 	<!-- Subway exits for public transport marks on the map -->
 	<string name="core_exit">退出</string>
-	<string name="routing_add_start_point">新增起點以計劃路線</string>
-	<string name="routing_add_finish_point">新增終點以計劃路線</string>
+	<!-- User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". -->
+	<string name="routing_add_start_point">使用搜尋或點擊地圖新增路線起點</string>
+	<!-- User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". -->
+	<string name="routing_add_finish_point">使用搜尋或點擊地圖新增目的地點</string>
 	<string name="placepage_remove_stop">移除</string>
 	<string name="placepage_add_stop">新增停靠站</string>
 	<!-- Alert to ask user relogin to OpenStreetMap with OAuth2 flow after OAuth1 authentication is deprecated. -->
