--- a/iphone/Maps/LocalizedStrings/be.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/be.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Выхад";
 
-"routing_add_start_point" = "Дадайце пункт адпраўлення, каб пракласці маршрут";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Скарыстайцеся пошукам або націсніце на мапе, каб дадаць пачатак маршруту";
 
-"routing_add_finish_point" = "Дадайце пункт прызначэння, каб пракласці маршрут";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Скарыстайцеся пошукам або націсніце на мапе, каб дадаць пункт прызначэння";
 
 "planning_route_manage_route" = "Кіраваць маршрутам";
 
