--- a/iphone/Maps/LocalizedStrings/bg.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/bg.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Изход";
 
-"routing_add_start_point" = "Добавяне на начална точка за планиране на маршрут";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Използвайте търсене или докоснете картата, за да добавите начална точка на маршрута";
 
-"routing_add_finish_point" = "Добавяне на крайна точка за планиране на маршрут";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Използвайте търсене или докоснете картата, за да добавите точка на дестинация";
 
 "planning_route_manage_route" = "Управление на маршрут";
 
