--- a/iphone/Maps/LocalizedStrings/ca.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ca.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Surt";
 
-"routing_add_start_point" = "Afegiu un punt inical per a planificar una ruta";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Utilitzeu la cerca o toqueu el mapa per afegir un punt de partida de la ruta";
 
-"routing_add_finish_point" = "Afegeiu la destinació per a planificar la ruta";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Utilitzeu la cerca o toqueu el mapa per afegir un punt de destinació";
 
 "planning_route_manage_route" = "Gestionar la ruta";
 
