--- a/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/da.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Afslut";
 
-"routing_add_start_point" = "Tilføj startpunkt for at planlægge en rute";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Brug søgning eller tryk på kortet for at tilføje et startpunkt for en rute";
 
-"routing_add_finish_point" = "Tilføj slutpunkt for at planlægge en rute";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Brug søgning eller tryk på kortet for at tilføje et destinationspunkt";
 
 "planning_route_manage_route" = "Administrer rute";
 
