--- a/iphone/Maps/LocalizedStrings/et.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/et.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Välju";
 
-"routing_add_start_point" = "Marsruudi planeerimiseks lisa lähtepunkt";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Marsruudi alguspunkti lisamiseks kasutage otsingut või puudutage kaarti";
 
-"routing_add_finish_point" = "Marsruudi planeerimiseks lisa sihtkoht";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Kasutage otsingut või koputage kaardil sihtkoha lisamiseks";
 
 "planning_route_manage_route" = "Halda marsruuti";
 
