--- a/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fi.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Poistu";
 
-"routing_add_start_point" = "Lisää alkupiste reitin suunnittelua varten";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Käytä hakua tai napauta karttaa lisätäksesi reitin lähtöpisteen";
 
-"routing_add_finish_point" = "Lisää määränpää reitin suunnittelua varten";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Käytä hakua tai napauta karttaa lisätäksesi kohdepisteen.";
 
 "planning_route_manage_route" = "Hallitse reittiä";
 
