--- a/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/fr.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Sortie";
 
-"routing_add_start_point" = "Ajouter un point de départ pour planifier un itinéraire";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Utilise la recherche ou tape sur la carte pour ajouter un point de départ d'itinéraire";
 
-"routing_add_finish_point" = "Ajouter un point d'arrivée pour planifier un itinéraire";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Utilise la recherche ou tape sur la carte pour ajouter un point de destination";
 
 "planning_route_manage_route" = "Gérer l’itinéraire";
 
