--- a/iphone/Maps/LocalizedStrings/hu.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/hu.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Kilépés";
 
-"routing_add_start_point" = "Adjon hozzá kiindulási pontot az útvonal megtervezéséhez";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Használja a keresést, vagy koppintson a térképre az útvonal kezdőpontjának hozzáadásához";
 
-"routing_add_finish_point" = "Adjon hozzá végpontot az útvonal tervezéséhez";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Használja a keresést, vagy koppintson a térképre egy célpont hozzáadásához";
 
 "planning_route_manage_route" = "Útvonal kezelése";
 
