--- a/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/it.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Uscita";
 
-"routing_add_start_point" = "Aggiungi un punto di partenza per pianificare un percorso";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Usa la ricerca o tocca la mappa per aggiungere un punto di partenza del percorso";
 
-"routing_add_finish_point" = "Aggiungi un punto di arrivo per pianificare un percorso";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Usa la ricerca o tocca la mappa per aggiungere un punto di destinazione";
 
 "planning_route_manage_route" = "Gestisci percorso";
 
