--- a/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ja.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "出口";
 
-"routing_add_start_point" = "ルートを計画するには出発地を追加してください";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "検索を使うか、地図上をタップしてルートの出発点を追加する";
 
-"routing_add_finish_point" = "ルートを計画するには目的地を追加してください";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "検索を使うか、地図上をタップして目的地を追加する";
 
 "planning_route_manage_route" = "ルートを編集";
 
