--- a/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ko.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "끝내기";
 
-"routing_add_start_point" = "경로 계획을 세우기 위한 시작 지점을 추가하세요";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "검색을 사용하거나 지도를 탭하여 경로 시작점을 추가합니다";
 
-"routing_add_finish_point" = "경로 계획을 세우기 위한 끝 지점을 추가하세요";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "검색을 사용하거나 지도를 탭하여 목적지 지점을 추가합니다";
 
 "planning_route_manage_route" = "경로 관리";
 
