--- a/iphone/Maps/LocalizedStrings/mr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/mr.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "बाहेर पडा";
 
-"routing_add_start_point" = "मार्ग नियोजित करण्यासाठी प्रारंभ बिंदू जोडा";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "मार्ग प्रारंभ बिंदू जोडण्यासाठी नकाशावर शोध वापरा किंवा टॅप करा";
 
-"routing_add_finish_point" = "मार्ग नियोजित करण्यासाठी इष्टस्थान जोडा";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "गंतव्य बिंदू जोडण्यासाठी नकाशावर शोधा किंवा टॅप करा";
 
 "planning_route_manage_route" = "मार्ग व्यवस्थापन";
 
