--- a/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/nb.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Avslutt";
 
-"routing_add_start_point" = "Angi startpunkt for å planlegge rute";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Bruk søk eller trykk på kartet for å legge til et startpunkt for ruten";
 
-"routing_add_finish_point" = "Angi sluttpunkt for å planlegge rute";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Bruk søk eller trykk på kartet for å legge til et destinasjonspunkt";
 
 "planning_route_manage_route" = "Administrere rute";
 
