--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Wyjście";
 
-"routing_add_start_point" = "Aby zaplanować trasę, dodaj punkt początkowy";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Użyj funkcji wyszukiwania lub dotknij mapy, aby dodać punkt początkowy trasy";
 
-"routing_add_finish_point" = "Aby zaplanować trasę, dodaj punkt końcowy";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Użyj funkcji wyszukiwania lub dotknij mapy, aby dodać punkt docelowy";
 
 "planning_route_manage_route" = "Zarządzaj trasą";
 
