--- a/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/ru.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Выход";
 
-"routing_add_start_point" = "Добавьте стартовую точку, чтобы построить маршрут";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Используйте поиск или коснитесь карты, чтобы добавить начальную точку маршрута";
 
-"routing_add_finish_point" = "Добавьте конечную точку, чтобы построить маршрут";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Используйте поиск или коснитесь карты, чтобы добавить точку назначения";
 
 "planning_route_manage_route" = "Изменить маршрут";
 
