--- a/iphone/Maps/LocalizedStrings/sk.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/sk.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Ukončiť";
 
-"routing_add_start_point" = "Pridaním počiatočného bodu začnite plánovať trasu";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Pomocou vyhľadávania alebo ťuknutím na mapu môžete pridať východiskový bod trasy";
 
-"routing_add_finish_point" = "Pridaním cieľového bodu naplánujete trasu";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Pomocou vyhľadávania alebo ťuknutím na mapu môžete pridať cieľový bod";
 
 "planning_route_manage_route" = "Spravovať trasu";
 
