--- a/iphone/Maps/LocalizedStrings/sw.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/sw.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Toka";
 
-"routing_add_start_point" = "Ongeza eneo la kuanzia ili kupanga njia ya kufuata";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Tumia utafutaji au uguse kwenye ramani ili kuongeza mahali pa kuanzia";
 
-"routing_add_finish_point" = "Ongeza eneo la kumalizia ili kupanga njia ya kufuata";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Tumia utafutaji au uguse kwenye ramani ili kuongeza mahali unakoenda";
 
 "planning_route_manage_route" = "Dhibiti njia ya kufuata";
 
