--- a/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/tr.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "Çık";
 
-"routing_add_start_point" = "Rotayı planlamak için bir başlangıç noktası ekleyin";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "Bir rota başlangıç noktası eklemek için aramayı kullanın veya haritaya dokunun";
 
-"routing_add_finish_point" = "Rotayı planlamak için bir varış noktası ekleyin";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "Bir hedef noktası eklemek için aramayı kullanın veya haritaya dokunun";
 
 "planning_route_manage_route" = "Rotayı yönet";
 
