--- a/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/zh-Hant.lproj/Localizable.strings
@@ -925,9 +925,11 @@
 /* Subway exits for public transport marks on the map */
 "core_exit" = "退出";
 
-"routing_add_start_point" = "新增起點以計劃路線";
+/* User selected the destination by pressing Route To, but the current position is unknown. User needs to select a starting point of a route using search or by tapping on the map and then pressing "Route From". */
+"routing_add_start_point" = "使用搜尋或點擊地圖新增路線起點";
 
-"routing_add_finish_point" = "新增終點以計劃路線";
+/* User selected the start of a route by pressing Route From. Now the destination of a route should be selected using search or by tapping on the map and then pressing "Route To". */
+"routing_add_finish_point" = "使用搜尋或點擊地圖新增目的地點";
 
 "planning_route_manage_route" = "管理路線";
 
