--- a/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
+++ b/iphone/Maps/LocalizedStrings/pl.lproj/Localizable.strings
@@ -920,6 +920,8 @@
 /* "traffic" as in "road congestion" */
 "traffic_data_unavailable" = "Dane o ruchu są niedostępne";
 
+"enable_logging" = "Włącz zbieranie danych";
+
 "transliteration_title" = "Transkrypcja na alfabet łaciński";
 
 /* Subway exits for public transport marks on the map */
@@ -1044,6 +1046,8 @@
 "power_managment_setting_auto" = "Automatycznie";
 
 "power_managment_setting_manual_max" = "Maksymalna oszczędność energii";
+
+"enable_logging_warning_message" = "Ta opcja zostaje włączona do zbierania danych działań w celach diagnostycznych. Pomaga to zespołowi zidentyfikować problemy z aplikacją. Włączaj opcję tylko na żądanie wsparcia technicznego Organic Maps.";
 
 "driving_options_title" = "Ustawienia nawigacji";
 
